--- a/html_basic/base_index.html
+++ b/html_basic/base_index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>web development basic</title>
   </head>
   <body></body>
 </html>
