--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,21 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <title>web development basic</title>
+    <meta charset="UTF-8" />
+    <title>Homepage</title>
   </head>
   <body>
-    <h1>Heading level 1</h1>
-    <p>This is the first paragraph of the page.</p>
-    <h2>Heading level 2</h2>
-    <p>This is the second paragraph of the page.</p>
-    <h3>Heading level 3</h3>
-    <p>This is the third paragraph of the page.</p>
-    <h4>Heading level 4</h4>
-    <p>This is the fourth paragraph of the page.</p>
-    <img
-      src="https://upload.wikimedia.org/wikipedia/commons/1/1f/Alu_logo.png"
-      alt=""
-    />
+    <header>
+      <ul>
+        <li><a href="index.html">Homepage</a></li>
+        <li><a href="tweets.html">Tweets Page</a></li>
+      </ul>
+    </header>
+    <main>
+      <article>
+        <h1>Welcome to Homepage</h1>
+        <p>
+          Hello and welcome to our page. We are delighted to be of service to
+          you.
+        </p>
+        <blockquote class="twitter-tweet">
+          <a href="https://twitter.com/TwitterHandle/status/TweetID"></a>
+        </blockquote>
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/1/1f/Alu_logo.png"
+          alt=""
+        />
+        <p><a href="tweets.html"></a>go to tweet homepage</p>
+      </article>
+      <aside>
+        <p>Placeholder to add comment thread later</p>
+      </aside>
+    </main>
+    <footer>
+      <p>
+        Made by John Akech -
+        <a href="https://github.com/John-Akech" target="_blank">here</a>.
+      </p>
+    </footer>
   </body>
 </html>
