--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -34,7 +34,7 @@
     <footer>
       <p>
         Made by John Akech -
-        <a href="https://github.com/John-Akech" target="_blank">here</a>.
+        <a href="https://github.com/John-Akech" target="_blank">GitHub Account</a>.
       </p>
     </footer>
   </body>
