--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Tweets Page</title>
   </head>
   <body>
-    <h1>Tweets Page</h1>
-    <p>
+    <header>
+      <ul>
+        <li><a href="index.html">Homepage</a></li>
+        <li><a href="tweets.html">Tweets Page</a></li>
+      </ul>
+    </header>
+    <main>
+      <article>
+        <h1>Tweets Page</h1>
+        <p>
       <a href="index.html"
         ><blockquote class="twitter-tweet">
           <p lang="en" dir="ltr">
             Watch Gandali the chimp reunite with his surrogate mum, Samantha,
             after spending the night away for veterinary treatment
-            <a href="https://t.co/X5E3liiLxl">pic.twitter.com/X5E3liiLxl</a>go
-            back to the homepage.
+            <a href="https://t.co/X5E3liiLxl">pic.twitter.com/X5E3liiLxl</a>
           </p>
           &mdash; CNN (@CNN)
           <a
@@ -21,12 +28,13 @@
             >September 11, 2023</a
           >
         </blockquote>
-        <script
-          async
-          src="https://platform.twitter.com/widgets.js"
-          charset="utf-8"
-        ></script
-      ></a>
-    </p>
+      </article>
+      <aside>
+        <p>Placeholder to add comment thread later</p>
+      </aside>
+    </main>
+    <footer>
+      <p>Made by <strong>John Akech</strong> - <a href="https://github.com/John-Akech" target="_blank">GitHub Account</a></p>
+    </footer>
   </body>
 </html>
