--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -5,7 +5,7 @@
     <title>Homepage</title>
     <link rel="stylesheet" href="styles.css">
   </head>
-  <body>
+  <body class="works_on_smartphone">
     <header>
       <ul>
         <li><a href="index.html">Homepage</a></li>
