--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -7,10 +7,12 @@
   </head>
   <body>
     <header>
-      <a href="./images/ALU+logos-01.jpg">LOGO</a>
-      <a href="">LINK</a>
-      <a href="">LINK</a>
-      <a href="">LINK</a>
+      <div><a href="./images/ALU+logos-01.jpg">LOGO</a></div>
+      <div>
+        <a href="">LINK</a>
+        <a href="">LINK</a>
+        <a href="">LINK</a>
+      </div>
     </header>
   </body>
 </html>
