--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -14,5 +14,38 @@
         <a href="">LINK</a>
       </div>
     </header>
+
+    <main>
+      <section>
+        <div>
+          <h1>Block 1</h1>
+          <p>A text element</p>
+          <button>A button tag</button>
+        </div>
+        <div>
+          <h2>Block 2</h2>
+        </div>
+        <div>
+          <img src="./images/images.png" alt="Image 1">
+          <h3>Heading 1</h3>
+          <p>text 1</p>
+        </div>
+        <div>
+          <img src="./images/images.png" alt="Image 2">
+          <h3>Heading 2</h3>
+          <p>text 2</p>
+        </div>
+        <div>
+          <img src="./images/images.png" alt="Image 3">
+          <h3>Heading 3</h3>
+          <p>text 3</p>
+        </div>
+        <div>
+          <img src="./images/images.png" alt="Image 4">
+          <h3>Heading 4</h3>
+          <p>text 4</p>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
