--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -46,6 +46,18 @@
           <p>text 4</p>
         </div>
       </section>
+
+      <section>
+        <div>
+          <img src="./images/images.jpeg" alt="Image">
+          <div>
+            <blockquote>
+              <p>"This is a quote."</p>
+              <p>some give text</p>
+            </blockquote>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
