--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -48,6 +48,7 @@
       </section>
 
       <section>
+        <h1>Quote section</h1>
         <div>
           <img src="./images/images.jpeg" alt="Image">
           <div>
@@ -55,6 +56,90 @@
               <p>"This is a quote."</p>
               <p>some give text</p>
             </blockquote>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <h1>New Section</h1>
+        <div>
+          <img src="./images/5NyzBxijspGUiFyCiz9F4-1200-80.jpg" alt="Image 1">
+          <h2>Video 1</h2>
+          <p>Text for video 1</p>
+          <div>
+            <img src="./images/macbook.jpeg" alt="Image for author">
+            <h3>Heading for author</h3>
+          </div>
+          <div>
+            <img src="./images/star.jpeg" alt="Star" />
+            <img src="./images/star.jpeg" alt="Star" />
+            <img src="./images/star.jpeg" alt="Star" />
+            <img src="./images/star.jpeg" alt="Star" />
+            <p>4 Stars</p>
+          </div>
+        </div>
+        <div>
+          <img src="./images/5NyzBxijspGUiFyCiz9F4-1200-80.jpg" alt="Image 1">
+          <h2>Video 1</h2>
+          <p>Text for video 1</p>
+          <div>
+            <img src="./images/macbook.jpeg" alt="Image for author">
+            <h3>Heading for author</h3>
+          </div>
+          <div>
+            <img src="./images/star.jpeg" alt="Star" />
+            <img src="./images/star.jpeg" alt="Star" />
+            <img src="./images/star.jpeg" alt="Star" />
+            <img src="./images/star.jpeg" alt="Star" />
+            <p>4 Stars</p>
+          </div>
+        </div>
+        <div>
+          <img src="./images/5NyzBxijspGUiFyCiz9F4-1200-80.jpg" alt="Image 2">
+          <h2>Video 2</h2>
+          <p>Text for video 2</p>
+          <div>
+            <img src="./images/macbook.jpeg" alt="Image for author">
+            <h3>Heading for author</h3>
+          </div>
+          <div>
+            <img src="./images/star.jpeg" alt="Star" />
+            <img src="./images/star.jpeg" alt="Star" />
+            <img src="./images/star.jpeg" alt="Star" />
+            <img src="./images/star.jpeg" alt="Star" />
+            <p>4 Stars</p>
+          </div>
+        </div>
+        <div>
+          <img src="./images/5NyzBxijspGUiFyCiz9F4-1200-80.jpg" alt="Image 3">
+          <h2>Video 3</h2>
+          <p>Text for video 3</p>
+          <div>
+            <img src="./images/macbook.jpeg" alt="Image for author" />
+            <h3>Heading for author</h3>
+          </div>
+          <div>
+            <img src="./images/star.jpeg" alt="Star" />
+            <img src="./images/star.jpeg" alt="Star" />
+            <img src="./images/star.jpeg" alt="Star" />
+            <img src="./images/star.jpeg" alt="Star" />
+            <p>4 Stars</p>
+          </div>
+        </div>
+        <div>
+          <img src="./images/5NyzBxijspGUiFyCiz9F4-1200-80.jpg" alt="Image 4">
+          <h2>Video 4</h2>
+          <p>Text for video 4</p>
+          <div>
+            <img src="./images/macbook.jpeg" alt="Image for author">
+            <h3>Heading for author</h3>
+          </div>
+          <div>
+            <img src="./images/star.jpeg" alt="Star" />
+            <img src="./images/star.jpeg" alt="Star" />
+            <img src="./images/star.jpeg" alt="Star" />
+            <img src="./images/star.jpeg" alt="Star" />
+            <p>4 Stars</p>
           </div>
         </div>
       </section>
