--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -71,11 +71,14 @@
             <h3>Heading for author</h3>
           </div>
           <div>
-            <img src="./images/star.jpeg" alt="Star" />
-            <img src="./images/star.jpeg" alt="Star" />
-            <img src="./images/star.jpeg" alt="Star" />
-            <img src="./images/star.jpeg" alt="Star" />
-            <p>4 Stars</p>
+            <div>
+              <img src="./images/star.jpeg" alt="Star">
+              <img src="./images/star.jpeg" alt="Star">
+              <img src="./images/star.jpeg" alt="Star">
+              <img src="./images/star.jpeg" alt="Star">
+              <img src="./images/star.jpeg" alt="Star">
+              <p>5 Stars</p>
+            </div>
           </div>
         </div>
         <div>
@@ -87,11 +90,12 @@
             <h3>Heading for author</h3>
           </div>
           <div>
-            <img src="./images/star.jpeg" alt="Star" />
-            <img src="./images/star.jpeg" alt="Star" />
-            <img src="./images/star.jpeg" alt="Star" />
-            <img src="./images/star.jpeg" alt="Star" />
-            <p>4 Stars</p>
+            <img src="./images/star.jpeg" alt="Star">
+            <img src="./images/star.jpeg" alt="Star">
+            <img src="./images/star.jpeg" alt="Star">
+            <img src="./images/star.jpeg" alt="Star">
+            <img src="./images/star.jpeg" alt="Star">
+            <p>5 Stars</p>
           </div>
         </div>
         <div>
@@ -103,11 +107,12 @@
             <h3>Heading for author</h3>
           </div>
           <div>
-            <img src="./images/star.jpeg" alt="Star" />
-            <img src="./images/star.jpeg" alt="Star" />
-            <img src="./images/star.jpeg" alt="Star" />
-            <img src="./images/star.jpeg" alt="Star" />
-            <p>4 Stars</p>
+            <img src="./images/star.jpeg" alt="Star">
+            <img src="./images/star.jpeg" alt="Star">
+            <img src="./images/star.jpeg" alt="Star">
+            <img src="./images/star.jpeg" alt="Star">
+            <img src="./images/star.jpeg" alt="Star">
+            <p>5 Stars</p>
           </div>
         </div>
         <div>
@@ -115,15 +120,16 @@
           <h2>Video 3</h2>
           <p>Text for video 3</p>
           <div>
-            <img src="./images/macbook.jpeg" alt="Image for author" />
+            <img src="./images/macbook.jpeg" alt="Image for author">
             <h3>Heading for author</h3>
           </div>
           <div>
-            <img src="./images/star.jpeg" alt="Star" />
-            <img src="./images/star.jpeg" alt="Star" />
-            <img src="./images/star.jpeg" alt="Star" />
-            <img src="./images/star.jpeg" alt="Star" />
-            <p>4 Stars</p>
+            <img src="./images/star.jpeg" alt="Star">
+            <img src="./images/star.jpeg" alt="Star">
+            <img src="./images/star.jpeg" alt="Star">
+            <img src="./images/star.jpeg" alt="Star">
+            <img src="./images/star.jpeg" alt="Star">
+            <p>5 Stars</p>
           </div>
         </div>
         <div>
@@ -135,14 +141,15 @@
             <h3>Heading for author</h3>
           </div>
           <div>
-            <img src="./images/star.jpeg" alt="Star" />
-            <img src="./images/star.jpeg" alt="Star" />
-            <img src="./images/star.jpeg" alt="Star" />
-            <img src="./images/star.jpeg" alt="Star" />
-            <p>4 Stars</p>
+            <img src="./images/star.jpeg" alt="Star">
+            <img src="./images/star.jpeg" alt="Star">
+            <img src="./images/star.jpeg" alt="Star">
+            <img src="./images/star.jpeg" alt="Star">
+            <img src="./images/star.jpeg" alt="Star">
+            <p>5 Stars</p>
           </div>
         </div>
       </section>
     </main>
   </body>
-</html>
+</html>    
