--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -35,6 +35,7 @@
           <h3>Heading 2</h3>
           <p>text 2</p>
         </div>
+
         <div>
           <img src="./images/images.png" alt="Image 3">
           <h3>Heading 3</h3>
@@ -81,6 +82,7 @@
             </div>
           </div>
         </div>
+
         <div>
           <img src="./images/5NyzBxijspGUiFyCiz9F4-1200-80.jpg" alt="Image 1">
           <h2>Video 1</h2>
@@ -98,6 +100,7 @@
             <p>5 Stars</p>
           </div>
         </div>
+
         <div>
           <img src="./images/5NyzBxijspGUiFyCiz9F4-1200-80.jpg" alt="Image 2">
           <h2>Video 2</h2>
@@ -114,7 +117,8 @@
             <img src="./images/star.jpeg" alt="Star">
             <p>5 Stars</p>
           </div>
-        </div>
+        </div
+	>
         <div>
           <img src="./images/5NyzBxijspGUiFyCiz9F4-1200-80.jpg" alt="Image 3">
           <h2>Video 3</h2>
@@ -131,6 +135,7 @@
             <img src="./images/star.jpeg" alt="Star">
             <p>5 Stars</p>
           </div>
+
         </div>
         <div>
           <img src="./images/5NyzBxijspGUiFyCiz9F4-1200-80.jpg" alt="Image 4">
@@ -149,6 +154,42 @@
             <p>5 Stars</p>
           </div>
         </div>
+      </section>
+
+      <section>
+        <h1>Membership section</h1>
+        <div>
+          <div>
+            <img src="./images/probook.jpeg" alt="An Image 1">
+        </div>
+          <div><h2>Block Items heading 1</h2></div>
+          <div><p>Block Items paragraph 1</p></div>
+        </div>
+
+	<div>
+          <div>
+            <img src="./images/probook.jpeg" alt="An Image 2">
+        </div>
+          <div><h2>Block Items heading 2</h2></div>
+          <div><p>Block Items paragraph 2</p></div>
+        </div>
+
+        <div>
+          <div>
+            <img src="./images/probook.jpeg" alt="An Image 3">
+        </div>
+          <div><h2>Block Items heading 3</h2></div>
+          <div><p>Block Items paragraph 3</p></div>
+        </div>
+
+        <div>
+          <div>
+            <img src="./images/probook.jpeg" alt="An Image 4">
+        </div>
+          <div><h2>Block Items heading 4</h2></div>
+          <div><p>Block Items paragraph 4</p></div>
+        </div>
+        <button>Block button</button>
       </section>
     </main>
   </body>
