--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -191,6 +191,32 @@
         </div>
         <button>Block button</button>
       </section>
+
+      <section>
+        <div>
+          <div>
+            <div>
+              <h3>FAQ 1</h3>
+              <p>Answer to FAQ 1</p>
+            </div>
+            <div>
+              <h3>FAQ 2</h3>
+              <p>Answer to FAQ 2</p>
+            </div>
+          </div>
+
+          <div>
+            <div>
+              <h3>FAQ 3</h3>
+              <p>Answer to FAQ 3</p>
+            </div>
+            <div>
+              <h3>FAQ 4</h3>
+              <p>Answer to FAQ 4</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>    
