--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -182,10 +182,10 @@
           <div><p>Block Items paragraph 3</p></div>
         </div>
 
-        <div>
+        div>
           <div>
             <img src="./images/probook.jpeg" alt="An Image 4">
-        </div>
+          </div>
           <div><h2>Block Items heading 4</h2></div>
           <div><p>Block Items paragraph 4</p></div>
         </div>
@@ -193,27 +193,17 @@
       </section>
 
       <section>
+        <h1>FAQ section</h1>
         <div>
           <div>
             <div>
-              <h3>FAQ 1</h3>
-              <p>Answer to FAQ 1</p>
-            </div>
-            <div>
-              <h3>FAQ 2</h3>
-              <p>Answer to FAQ 2</p>
+              <h2>FAQ 1</h2>
+              <p>Answer to FAQ !</p>
             </div>
           </div>
-
           <div>
-            <div>
-              <h3>FAQ 3</h3>
-              <p>Answer to FAQ 3</p>
-            </div>
-            <div>
-              <h3>FAQ 4</h3>
-              <p>Answer to FAQ 4</p>
-            </div>
+            <h2>FAQ 2</h2>
+            <p>Answer to FAQ 2</p>
           </div>
         </div>
       </section>
