--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -182,10 +182,10 @@
           <div><p>Block Items paragraph 3</p></div>
         </div>
 
-        div>
+        <div>
           <div>
             <img src="./images/probook.jpeg" alt="An Image 4">
-          </div>
+	    </div>
           <div><h2>Block Items heading 4</h2></div>
           <div><p>Block Items paragraph 4</p></div>
         </div>
@@ -207,6 +207,21 @@
           </div>
         </div>
       </section>
+    </main>
+    <footer>
+      <div>
+        <div>
+          <img src="./images/pic.jpeg" alt="Image" />
+          <div>
+            <a
+              href="https://www.mooc.org/blog/applications-of-computer-programming"
+              >Image Link</a
+            >
+          </div>
+        </div>
+        <p>A global block</p>
+      </div>
+    </footer>
     </main>
   </body>
 </html>    
