--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -1,228 +1,277 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Skeleton</title>
-    <link rel="stylesheet" href="style.css">
+    <title>HTML, Advance</title>
   </head>
   <body>
     <header>
-      <div><a href="./images/ALU+logos-01.jpg">LOGO</a></div>
+      <a href="./imgs/logo.png"></a><img src="./imgs/logo.png" alt="">
       <div>
-        <a href="">LINK</a>
-        <a href="">LINK</a>
-        <a href="">LINK</a>
+        <a href="">Courses</a>
+        <a href="">Pricing</a>
+        <a href="">Login</a>
       </div>
     </header>
 
     <main>
       <section>
         <div>
-          <h1>Block 1</h1>
-          <p>A text element</p>
-          <button>A button tag</button>
+          <h1>Get Schooled</h1>
+          <p></p>
+          <button>REGISTER FOR FREE</button>
         </div>
         <div>
-          <h2>Block 2</h2>
-        </div>
-        <div>
-          <img src="./images/images.png" alt="Image 1">
-          <h3>Heading 1</h3>
-          <p>text 1</p>
-        </div>
-        <div>
-          <img src="./images/images.png" alt="Image 2">
-          <h3>Heading 2</h3>
-          <p>text 2</p>
-        </div>
-
-        <div>
-          <img src="./images/images.png" alt="Image 3">
-          <h3>Heading 3</h3>
-          <p>text 3</p>
-        </div>
-        <div>
-          <img src="./images/images.png" alt="Image 4">
-          <h3>Heading 4</h3>
-          <p>text 4</p>
-        </div>
-      </section>
-
-      <section>
-        <h1>Quote section</h1>
-        <div>
-          <img src="./images/images.jpeg" alt="Image">
+          <h2>Learn from the pros</h2>
           <div>
-            <blockquote>
-              <p>"This is a quote."</p>
-              <p>some give text</p>
-            </blockquote>
-          </div>
-        </div>
-      </section>
-
-      <section>
-        <h1>New Section</h1>
-        <div>
-          <img src="./images/5NyzBxijspGUiFyCiz9F4-1200-80.jpg" alt="Image 1">
-          <h2>Video 1</h2>
-          <p>Text for video 1</p>
-          <div>
-            <img src="./images/macbook.jpeg" alt="Image for author">
-            <h3>Heading for author</h3>
-          </div>
-          <div>
+            <div class="image-container">
+              <img src="./imgs/img1.jpg" alt="smile">
+              <h3>Philip Massey</h3>
+              <p>
+                Smile of the year <br />
+                2018-2019
+              </p>
+            </div>
             <div>
-              <img src="./images/star.jpeg" alt="Star">
-              <img src="./images/star.jpeg" alt="Star">
-              <img src="./images/star.jpeg" alt="Star">
-              <img src="./images/star.jpeg" alt="Star">
-              <img src="./images/star.jpeg" alt="Star">
-              <p>5 Stars</p>
+              <img src="./imgs/img2.jpg" alt="">
+              <h3>Nannie Lawrence</h3>
+              <p>Best little smile <br />2017</p>
+            </div>
+            <div>
+              <img src="./imgs/img3.jpg" alt="">
+              <h3>Bruce Walters</h3>
+              <p>Best friend smile <br />live performance 2019</p>
+            </div>
+            <div>
+              <img src="./imgs/img4.jpg" alt="">
+              <h3>Henry Hughes</h3>
+              <p>24th smile winner <br />2016-2019</p>
             </div>
           </div>
         </div>
-
+      </section>
+      <section>
         <div>
-          <img src="./images/5NyzBxijspGUiFyCiz9F4-1200-80.jpg" alt="Image 1">
-          <h2>Video 1</h2>
-          <p>Text for video 1</p>
+          <img src="./imgs/midimg.jpg" alt="">
           <div>
-            <img src="./images/macbook.jpeg" alt="Image for author">
-            <h3>Heading for author</h3>
-          </div>
-          <div>
-            <img src="./images/star.jpeg" alt="Star">
-            <img src="./images/star.jpeg" alt="Star">
-            <img src="./images/star.jpeg" alt="Star">
-            <img src="./images/star.jpeg" alt="Star">
-            <img src="./images/star.jpeg" alt="Star">
-            <p>5 Stars</p>
-          </div>
-        </div>
-
-        <div>
-          <img src="./images/5NyzBxijspGUiFyCiz9F4-1200-80.jpg" alt="Image 2">
-          <h2>Video 2</h2>
-          <p>Text for video 2</p>
-          <div>
-            <img src="./images/macbook.jpeg" alt="Image for author">
-            <h3>Heading for author</h3>
-          </div>
-          <div>
-            <img src="./images/star.jpeg" alt="Star">
-            <img src="./images/star.jpeg" alt="Star">
-            <img src="./images/star.jpeg" alt="Star">
-            <img src="./images/star.jpeg" alt="Star">
-            <img src="./images/star.jpeg" alt="Star">
-            <p>5 Stars</p>
-          </div>
-        </div
-	>
-        <div>
-          <img src="./images/5NyzBxijspGUiFyCiz9F4-1200-80.jpg" alt="Image 3">
-          <h2>Video 3</h2>
-          <p>Text for video 3</p>
-          <div>
-            <img src="./images/macbook.jpeg" alt="Image for author">
-            <h3>Heading for author</h3>
-          </div>
-          <div>
-            <img src="./images/star.jpeg" alt="Star">
-            <img src="./images/star.jpeg" alt="Star">
-            <img src="./images/star.jpeg" alt="Star">
-            <img src="./images/star.jpeg" alt="Star">
-            <img src="./images/star.jpeg" alt="Star">
-            <p>5 Stars</p>
-          </div>
-
-        </div>
-        <div>
-          <img src="./images/5NyzBxijspGUiFyCiz9F4-1200-80.jpg" alt="Image 4">
-          <h2>Video 4</h2>
-          <p>Text for video 4</p>
-          <div>
-            <img src="./images/macbook.jpeg" alt="Image for author">
-            <h3>Heading for author</h3>
-          </div>
-          <div>
-            <img src="./images/star.jpeg" alt="Star">
-            <img src="./images/star.jpeg" alt="Star">
-            <img src="./images/star.jpeg" alt="Star">
-            <img src="./images/star.jpeg" alt="Star">
-            <img src="./images/star.jpeg" alt="Star">
-            <p>5 Stars</p>
+            <blockquote>Person Name</blockquote>
+            <p>
+              "Those tutorials are concise and go straight to the point. I can't
+              think of a better place to learn smiling. And it's so fun!"
+            </p>
+            <p>Weather presenter</p>
           </div>
         </div>
       </section>
 
       <section>
-        <h1>Membership section</h1>
+        <h1>Most popular tutorials</h1>
         <div>
           <div>
-            <img src="./images/probook.jpeg" alt="An Image 1">
-        </div>
-          <div><h2>Block Items heading 1</h2></div>
-          <div><p>Block Items paragraph 1</p></div>
-        </div>
-
-	<div>
-          <div>
-            <img src="./images/probook.jpeg" alt="An Image 2">
-        </div>
-          <div><h2>Block Items heading 2</h2></div>
-          <div><p>Block Items paragraph 2</p></div>
-        </div>
-
-        <div>
-          <div>
-            <img src="./images/probook.jpeg" alt="An Image 3">
-        </div>
-          <div><h2>Block Items heading 3</h2></div>
-          <div><p>Block Items paragraph 3</p></div>
-        </div>
-
-        <div>
-          <div>
-            <img src="./images/probook.jpeg" alt="An Image 4">
-	    </div>
-          <div><h2>Block Items heading 4</h2></div>
-          <div><p>Block Items paragraph 4</p></div>
-        </div>
-        <button>Block button</button>
-      </section>
-
-      <section>
-        <h1>FAQ section</h1>
-        <div>
+            <img src="./imgs/video1.jpg" alt="">
+            <h2>Diagonal Smile</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
+              deleniti mollitia ipsa veritatis autem! Dolores pariatur impedit
+              vero optio beatae aliquam. Sunt at sequi repellendus voluptatibus?
+              Soluta ducimus ipsa necessitatibus!
+            </p>
+            <img src="./imgs/img1.jpg" alt="video 1">
+            <h3>Philip Massey</h3>
+          </div>
           <div>
             <div>
-              <h2>FAQ 1</h2>
-              <p>Answer to FAQ !</p>
+              <img src="./imgs/Star.jpg" alt="Star">
+              <img src="./imgs/Star.jpg" alt="Star">
+              <img src="./imgs/Star.jpg" alt="Star">
+              <img src="./imgs/Star.jpg" alt="Star">
+              <p>8 min</p>
             </div>
           </div>
           <div>
-            <h2>FAQ 2</h2>
-            <p>Answer to FAQ 2</p>
+            <img src="./imgs/video2.jpg" alt="video 2">
+            <h2>Sad Smile</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+              non, eaque qui eius ratione culpa incidunt nihil pariatur quod
+              iure nisi expedita praesentium iste nobis voluptates explicabo
+              aspernatur blanditiis? Illo.
+            </p>
+            <img src="./imgs/img1.jpg" alt="">
+            <h3>Philip Massey</h3>
+          </div>
+          <div>
+            <div>
+              <img src="./imgs/Star.jpg" alt="Star">
+              <img src="./imgs/Star.jpg" alt="Star">
+              <img src="./imgs/Star.jpg" alt="Star">
+              <img src="./imgs/Star.jpg" alt="Star">
+              <p>8 min</p>
+            </div>
+          </div>
+          <div>
+            <img src="./imgs/video3.jpg" alt="video 3">
+            <h2>Natural Smile</h2>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi
+              mollitia, reprehenderit commodi consequatur sapiente animi, enim
+              exercitationem laboriosam ea quam, accusamus perspiciatis nam
+              ipsam minus quae at porro odio praesentium.
+            </p>
+          </div>
+          <img src="./imgs/img1.jpg" alt="">
+          <h3>Philip Massey</h3>
+        </div>
+        <div>
+          <div>
+            <img src="./imgs/Star.jpg" alt="Star">
+            <img src="./imgs/Star.jpg" alt="Star">
+            <img src="./imgs/Star.jpg" alt="Star">
+            <img src="./imgs/Star.jpg" alt="Star">
+            <p>8 min</p>
+          </div>
+          <div>
+            <img src="./imgs/video4.jpg" alt="">
+            <h2>Happy Smile</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+              facilis officia libero soluta, sunt accusantium! Molestiae earum
+              odio veniam, quia totam, asperiores iure eligendi voluptates, nisi
+              optio ullam dignissimos libero.
+            </p>
+            <div>
+              <img src="./imgs/img1.jpg" alt="">
+              <h3>Philip Massey</h3>
+            </div>
+            <div>
+              <div>
+                <img src="./imgs/Star.jpg" alt="Star">
+                <img src="./imgs/Star.jpg" alt="Star">
+                <img src="./imgs/Star.jpg" alt="Star">
+                <img src="./imgs/Star.jpg" alt="Star">
+                <p>8 min</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <h1>Free membership</h1>
+        <div>
+          <div>
+            <img src="./imgs/Smileschoollogo.jpg" alt="">
+          </div>
+          <h2>Lorem ipsum</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. At
+            molestiae similique vel eaque id? Impedit blanditiis illo, aliquam
+            ex delectus, quas quod porro minima voluptatum, asperiores eos optio
+            velit animi!
+          </p>
+          <div>
+            <img src="./imgs/Smileschoollogo.jpg" alt="">
+          </div>
+          <h2>Lorem ipsum</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis
+            nisi excepturi commodi, tenetur aperiam ducimus error, repellendus,
+            sint reprehenderit maxime rem ratione? Illo, fugit iste? Odio maxime
+            odit quas obcaecati.
+          </p>
+          <div>
+            <img src="./imgs/Smileschoollogo.jpg" alt="">
+          </div>
+          <h2>Lorem ipsum</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+            voluptatum numquam voluptate iusto. Ipsa ipsam fugit ullam
+            voluptates voluptatum corrupti officia illo reiciendis molestias
+            accusantium eveniet, voluptate dolorem ut laborum.
+          </p>
+          <div>
+            <img src="./imgs/Smileschoollogo.jpg" alt="">
+          </div>
+          <h2>Lorem ipsum</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi
+            dignissimos sunt qui dolores accusamus quo architecto labore
+            quisquam tenetur in. Natus corporis temporibus, ex aperiam eveniet
+            laudantium quia minima cum.
+          </p>
+        </div>
+        <button>REGISTER FOR FREE</button>
+      </section>
+
+      <section>
+        <h1>F.A.Q.</h1>
+        <div class="row-block">
+          <div class="item-block">
+            <h3>How does this work?</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Blanditiis debitis, hic ipsam odit, doloremque, impedit delectus
+              magnam itaque aspernatur asperiores at obcaecati autem voluptas
+              quasi corrupti in soluta magni quisquam.
+            </p>
+          </div>
+
+          <div class="item-block">
+            <h3>How does this work?</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+              quod voluptatibus consequuntur? Impedit, placeat nam doloribus ut
+              ducimus saepe commodi magni laborum. Quaerat et reprehenderit
+              culpa recusandae asperiores unde blanditiis.
+            </p>
+          </div>
+        </div>
+        <div class="row-block">
+          <div class="item-block">
+            <h3>How does this work?</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus
+              error expedita dolores saepe maiores? Fugit ad quisquam delectus
+              accusantium. Corrupti eos, voluptates laborum nam beatae ipsa illo
+              nostrum ut voluptatibus!
+            </p>
+          </div>
+          <div class="item-block">
+            <h3>How does this work?</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+              soluta aliquam saepe quis voluptas ab hic eveniet maiores
+              consequatur maxime accusamus assumenda, eligendi quo dolores,
+              dignissimos sapiente quia beatae in.
+            </p>
           </div>
         </div>
       </section>
     </main>
     <footer>
-      <div>
-        <div>
-          <img src="./images/pic.jpeg" alt="Image" />
+      <div class="global-block">
+        <div class="row-block">
           <div>
-            <a
-              href="https://www.mooc.org/blog/applications-of-computer-programming"
-              >Image Link</a
-            >
+            <img src="./imgs/logo.png" alt="SmileSchool">
+          </div>
+          <div>
+            <div>
+              <a href="./imgs/fb.png"
+                ><img src="./imgs/Facebook_White.png" alt="Facebook"
+              /></a>
+              <a href="./imgs/twitter.png"
+                ><img src="./imgs/Twitter_White.png" alt="Twitter"
+              /></a>
+              <a href="./imgs/ig.png"
+                ><img src="./imgs/Instagram_White.png" alt="Instagram"
+              /></a>
+            </div>
+            <p>©SmileSchoool2023</p>
           </div>
         </div>
-        <p>A global block</p>
       </div>
     </footer>
-    </main>
   </body>
-</html>    
+</html>
+
